Bug 467008.  Pointing to a non-existent file:// binding URI leaks.  r+sr=sicking